--- a/app/views/kids/index.html.erb
+++ b/app/views/kids/index.html.erb
@@ -61,6 +61,7 @@
 		      <th scope="col">Section</th>
 		      <th scope="col">Assigned Book(ID)</th>
 		      <th scope="col">Issue date</th>
+		      <th scope="col">Days remaining</th>
 		      <th scope="col">Assign book</th>
 		      <th scope="col">Delete</th>
 		      <th scope="col">More Details</th>	
@@ -71,8 +72,9 @@
 		    <tr>
 		      <td><%= kid.studentname %></td>
 		      <td><%= kid.section %></td>
-			<td><%= kid.bookid %></td>
-			<td><% if !(kid.bookid.blank?)%><%=kid.updated_at.strftime("%m/%d/%y")%><%end%></td>
+		      <td><%= kid.bookid %></td>
+		      <td><% if !(kid.bookid.blank?)%><%=kid.updated_at.strftime("%m/%d/%y")%><%end%></td>
+		      <td><% if !(kid.bookid.blank?)%><%=(((kid.updated_at+10.days)-(Time.now))/86400).round%> <% end %></td>
 		      <td><%= link_to 'Assign', edit_kid_path(kid) %></td>
 		      <td><%= link_to 'Delete', kid_path(kid),
 			      method: :delete,
